# Changelog
# $Id$
nn-nn-13 - Version 5.1.28

  - Fix for Bug#70835 (17750877), SQLExceptions thrown because of query interruption (KILL QUERY, query timeout, etc.)
    didn't extend java.sql.SQLNonTransientException for JDBC4+ deployments.

  - Fix for Bug#24344 test case, test fails if it's run with UTC timezone settings. 

  - Fix for Bug#69777, Setting maxAllowedPacket below 8203 makes blobSendChunkSize negative.

  - Fix for Bug#35115, yearIsDateType=false has no effect on result's column type and class.

  - Fix for Bug#68916 (16691047), closeOnCompletion doesn't work.

  - Fix for Bug #69746 (17164058), ResultSet closed after Statement.close() when dontTrackOpenResources=true

  - Fix for Bug#70842 (17753369), Adding live management of replication host topographies.

11-04-13 - Version 5.1.27

  - Fix for Bug#17248345, getFunctionColumns() method returns columns of procedure.

  - Fix for Bug#69290 (16879239), JDBC Table type "SYSTEM TABLE" is used inconsistently.

  - Fix for Bug#68562, Combination rewriteBatchedStatements and useAffectedRows not working as expected.

  - Fix for Bug#69452 (17015673), memory size connection property doesn't support large values well.

  - Added tests for InnoDB full-text search support introduced in 5.6GA.

  - Extended slow query warning with query execution plan for INSERT, REPLACE, UPDATE and DELETE.

  - Added tests for IPv6 functions introduced in 5.6GA.

  - Added support of authentication data up to 2^64-1 bytes.

  - Fix for Bug#38252, ResultSet.absolute(0) is not behaving according to JDBC specification.

  - Fix for Bug#62469, JDBC Authentication Fails with Null Byte in Scramble

  - Fix for Bug#69506, XAER_DUPID error code is not returned when a duplicate XID is offered in Java.

  - Added support for multi-master replication topographies in ReplicationDriver.  ReplicationDriver now uses two discrete load-balanced