@@ -1,5 +1,5 @@
 /*
- Copyright (c) 2004, 2012, Oracle and/or its affiliates. All rights reserved.
+ Copyright (c) 2004, 2013, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
