@@ -1,7 +1,6 @@
 /*
- Copyright (c) 2002, 2013, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2002, 2013, Oracle and/or its affiliates. All rights reserved.
  
-
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
   There are special exceptions to the terms and conditions of the GPLv2 as it is applied to
@@ -19,9 +18,6 @@
   You should have received a copy of the GNU General Public License along with this
   program; if not, write to the Free Software Foundation, Inc., 51 Franklin St, Fifth
   Floor, Boston, MA 02110-1301  USA
-
-
-
  */
 package com.mysql.jdbc;
 
@@ -38,16 +34,6 @@ import com.mysql.jdbc.profiler.ProfilerEventHandler;
  * @version $Id$
  */
 public class RowDataDynamic implements RowData {
-
-	class OperationNotSupportedException extends SQLException {
-
-		static final long serialVersionUID = 5582227030787355276L;
-
-		OperationNotSupportedException() {
-			super(
-					Messages.getString("RowDataDynamic.10"), SQLError.SQL_STATE_ILLEGAL_ARGUMENT); //$NON-NLS-1$
-		}
-	}
 
 	private int columnCount;
 
